--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next",
     "build": "next build",
     "start": "next start",
     "export": "next export"
@@ -14,6 +14,7 @@
     "framer-motion": "^2.9.4",
     "next": "10.0.2",
     "next-images": "^1.6.2",
+    "next-pwa": "^3.1.5",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-hamburgers": "^1.0.0",
