--- a/public/manifest.json
+++ b/public/manifest.json
@@ -5,17 +5,20 @@
       {
         "src": "/iconMobile.png",
         "sizes": "192x192",
-        "type": "image/png"
+        "type": "image/png",
+        "purpose": "any maskable"
       },
       {
         "src": "/iconMobile.png",
         "sizes": "384x384",
-        "type": "image/png"
+        "type": "image/png",
+        "purpose": "any maskable"
       },
       {
         "src": "/iconMobile.png",
         "sizes": "512x512",
-        "type": "image/png"
+        "type": "image/png",
+        "purpose": "any maskable"
       }
     ],
     "start_url": "/index.html",
